# FastHTMX

./: pyproject.toml
.github/workflows/: cd.yml
fasthtmx/: __init__.py
