[tool.poetry]
name        = "fasthtmx"
version     = "0.1.2"
description = ""
authors     = ["henrique <henrique@xonha.space>"]
readme      = "README.md"

[tool.poetry.dependencies]
python  = "^3.8"
fastapi = "^0.109.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
